# Meeting-Minutes-AI-7

./: .env.example  .gitignore  CLAUDE.md  QUICKSTART.md  README.md  check_db.py  checklist.md  clarify.md  constitution.md  create_shortcut.vbs  plan.md  pyproject.toml  spec.md  start.bat  start.ps1  tasks.md  第1月-新人績效考核表-創新服務研發處研發部_鄭忠存.xlsx
.specify/: init-options.json
.specify/scripts/powershell/: common.ps1  create-new-feature.ps1
app/: config.py  database.py  dependencies.py  main.py
app/core/: exceptions.py
app/models/: database_models.py  schemas.py
app/services/: annotation_service.py  audio_service.py  auth_service.py  device_manager.py  diarization_service.py  meeting_processor.py  ollama_service.py
app/templates/: accounts.html  admin_dashboard.html  announcement_detail.html  announcement_form.html  announcements.html  base.html  change_password.html  history.html  index.html  login.html  meeting.html  register.html
specs/: backlog.md  system-flowchart.md
specs/001-gpu-acceleration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-gpu-cpu-workload-split/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-ollama-gpu-boost/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-chunked-summary/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-cancel-processing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-user-auth/: data-model.md  learning-notes.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-account-management/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/008-role-permission/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/009-announcements/: data-model.md  plan.md  research.md  spec.md  tasks.md
tests/: conftest.py  test_accounts.py  test_auth.py  test_chunked_summary.py  test_permissions.py
(+33 files in other folders)
