[project]
name = "meeting-minutes-ai"
version = "0.1.0"
description = "AI 驅動的會議紀錄應用程式，支援語音辨識、自動摘要與結構化輸出"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "jinja2",
    "sqlalchemy",
    "aiosqlite",
    "pydantic-settings",
    "pydub",
    "python-dotenv",
    "google-generativeai",
    "httpx",
    "openai-whisper>=20250625",
]

[project.optional-dependencies]
local = ["openai-whisper"]
diarization = ["pyannote.audio", "torch"]
# NOTE: 若要啟用 GPU 加速，需手動安裝 CUDA 版 PyTorch：
#   pip install torch --index-url https://download.pytorch.org/whl/cu121
# 標準 pip install 只會安裝 CPU 版 torch。
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
